--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 }
 
 footer {
-    background: linear-gradient(45deg, #790000, #ff0000); /* Example gradient from orange to light orange */
+    background: linear-gradient(45deg, #a00101, #cd0000); /* Example gradient from orange to light orange */
     color: white; /* Make the text color white for contrast */
 
 }
