--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 }
 
 footer {
-    background: linear-gradient(45deg, #a00101, #cd0000); /* Example gradient from orange to light orange */
+    background: linear-gradient(45deg, #0064b0, #004285); /* Example gradient from orange to light orange */
     color: white; /* Make the text color white for contrast */
 
 }
@@ -52,7 +52,7 @@ footer {
 
     /* Parallax background styling */
     .parallax {
-        background-image: url('./media/orange.jpg'); /* Replace with your image URL */
+        background-image: url('./media/blue-people-building.jpg'); /* Replace with your image URL */
         background-attachment: fixed;
         background-size: cover;
         background-position: center;
@@ -80,8 +80,23 @@ footer {
         background-color: #f8f9fa; /* Light background color */
     }
 
+
+    .custom-navbar {
+        background-color: rgb(0, 38, 58); /* Use your desired color (e.g., green) */
+    }
+
+h2 {
+    font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+   
+    
+
 /*h2 {
  font-family: 'EB Garamond', serif;
  font-weight: bold;
 }
+
 
