--- a/styles.css
+++ b/styles.css
@@ -31,18 +31,20 @@
 }
 
 footer {
-    background: linear-gradient(45deg, #0064b0, #004285); /* Example gradient from orange to light orange */
-    color: white; /* Make the text color white for contrast */
-
+    background: black; /* Example gradient from orange to light orange */
+    color: gold; /* Make the text color white for contrast */
+    border: 2px solid gold;
 }
+
        /* Force text color to white even if text-body-secondary is present */
        footer .text-body-secondary {
-        color: white !important;
+        color: gold !important;
+       
     }
 
     /* Override link colors */
     footer a {
-        color: white;
+        color: gold;
         text-decoration: none;
     }
 
@@ -52,7 +54,7 @@ footer {
 
     /* Parallax background styling */
     .parallax {
-        background-image: url('./media/blue-people-building.jpg'); /* Replace with your image URL */
+        background-image: url('./media/orange.jpg'); /* Replace with your image URL */
         background-attachment: fixed;
         background-size: cover;
         background-position: center;
@@ -82,9 +84,17 @@ footer {
 
 
     .custom-navbar {
-        background-color: rgb(0, 38, 58); /* Use your desired color (e.g., green) */
+        background-color: black; /* Use your desired color (e.g., green) */
     }
 
+    .custom-navbar .navbar-brand,
+.custom-navbar .nav-link {
+    color: gold !important; /* Replace with your desired color code */
+}
+.custom-navbar .nav-link:hover {
+    color: gold !important; /* Optional: Add hover color */
+}
+  
 h2 {
     font-family: "Lora", serif;
   font-optical-sizing: auto;
@@ -92,11 +102,31 @@ h2 {
   font-style: normal;
 }
    
+p {
+    color: white;
+}
+
+.custom-list-group .list-group-item {
+    background-color: black; /* Desired background color */
+    border: 2px solid black;
+}
+
+li{
+    color: white;
+}
+h6 {
+    color: gold;
+}
+
+.container-contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
     
 
 /*h2 {
  font-family: 'EB Garamond', serif;
  font-weight: bold;
-}
-
-
+}/
